# utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: buildAndTest.yml  coverage.yml  linux.yml  macos.yml  windows.yml  windows_x64.yml
build_dynamic_md/: ALL_BUILD.vcxproj  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  utils-config.cmake  utils-targets.cmake  utils.sln
build_dynamic_md/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utils.vcxproj  utils.vcxproj.filters
build_dynamic_md/lib/Debug/: utils_dbg_md.exp  utils_dbg_md.lib
build_dynamic_md/lib/MinSizeRel/: utils.exp
build_dynamic_md/lib/RelWithDebInfo/: utils.exp
build_dynamic_md/lib/Release/: utils_md.exp  utils_md.lib
build_dynamic_md/lib/utils.dir/Debug/: exports.def  objects.txt  utils_dbg_md.dll.recipe  utils_dbg_md.ilk
build_dynamic_md/lib/utils.dir/MinSizeRel/: exports.def  objects.txt  utils.dll.recipe
build_dynamic_md/lib/utils.dir/RelWithDebInfo/: exports.def  objects.txt  utils.dll.recipe  utils.ilk
build_dynamic_md/lib/utils.dir/Release/: objects.txt  utils_md.dll.recipe
build_dynamic_md/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_dynamic_md/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_dynamic_md/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_dynamic_md/x64/MinSizeRel/ALL_BUILD/: ALL_BUILD.recipe
build_dynamic_md/x64/MinSizeRel/ZERO_CHECK/: ZERO_CHECK.recipe
build_dynamic_md/x64/RelWithDebInfo/ALL_BUILD/: ALL_BUILD.recipe
build_dynamic_md/x64/RelWithDebInfo/ZERO_CHECK/: ZERO_CHECK.recipe
build_dynamic_md/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_dynamic_md/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_dynamic_mt/: ALL_BUILD.vcxproj  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  utils-targets.cmake  utils.sln
build_dynamic_mt/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utils.vcxproj  utils.vcxproj.filters
build_dynamic_mt/lib/Debug/: utils_dbg_mt.exp  utils_dbg_mt.lib
build_dynamic_mt/lib/MinSizeRel/: utils.exp  utils.lib
build_dynamic_mt/lib/RelWithDebInfo/: utils.exp  utils.lib
build_dynamic_mt/lib/Release/: utils_mt.exp  utils_mt.lib
build_dynamic_mt/lib/utils.dir/Debug/: objects.txt  utils_dbg_mt.dll.recipe  utils_dbg_mt.ilk
build_dynamic_mt/lib/utils.dir/MinSizeRel/: objects.txt  utils.dll.recipe
build_dynamic_mt/lib/utils.dir/RelWithDebInfo/: objects.txt  utils.dll.recipe  utils.ilk
build_dynamic_mt/lib/utils.dir/Release/: exports.def  objects.txt  utils_mt.dll.recipe
build_dynamic_mt/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_dynamic_mt/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_static_md/: ALL_BUILD.vcxproj  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  utils-targets.cmake  utils.sln
build_static_md/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utils.vcxproj  utils.vcxproj.filters
build_static_md/lib/Debug/: utils_dbg_md.lib
build_static_md/lib/MinSizeRel/: utils.lib
build_static_md/lib/RelWithDebInfo/: utils.lib
build_static_md/lib/Release/: utils_md.lib
build_static_md/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
build_static_mt/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  utils-targets.cmake  utils.sln
build_static_mt/lib/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  utils.vcxproj  utils.vcxproj.filters
build_static_mt/lib/Debug/: utils_dbg_mt.lib
build_static_mt/lib/MinSizeRel/: utils.lib
build_static_mt/lib/RelWithDebInfo/: utils.lib
build_static_mt/lib/Release/: utils_mt.lib
build_static_mt/lib/lib/: pkgconfig
build_static_mt/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters
cmake/: utils-config.cmake.in  utils.pc.in
example/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/wormhole/utils/: condition_variable.h  defer_call.h  fast_pimpl.h  log.h  to_integral.h  traits.h
lib/include/wormhole/utils/logger/: ilogger.h  level.h  spdlog_logger.h
lib/include/wormhole/utils/serialization/: deserializer.h  serializer.h
lib/src/: condition_variable.cc  log.cc
lib/src/logger/: spdlog_logger.cc
lib/src/serialization/: deserializer.cc  serializer.cc
test/: CMakeLists.txt
test/condition_variable_test/: CMakeLists.txt  condition_variable_test.cc
test/defer_call_test/: CMakeLists.txt  defer_call_test.cc
test/deserializer_test/: CMakeLists.txt  deserializer_test.cc
test/serializer_test/: CMakeLists.txt  serializer_test.cc
(+173 files in other folders)
